analizadorSintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGIN
    NIL
    THEN
    WHEN

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> print_statement
Rule 5     statement -> puts_statement
Rule 6     statement -> input_statement
Rule 7     statement -> assignment_statement
Rule 8     statement -> data_structure
Rule 9     statement -> control_structure
Rule 10    statement -> function_definition
Rule 11    statement -> return_statement
Rule 12    statement -> class_definition
Rule 13    statement -> method_call
Rule 14    statement -> array_append
Rule 15    statement -> indexing
Rule 16    statement -> array_assignament
Rule 17    statement -> expression
Rule 18    class_definition -> CLASS CONSTANT class_body END
Rule 19    class_body -> statement_list
Rule 20    class_statement -> function_definition
Rule 21    class_statement -> assignment_statement
Rule 22    return_statement -> RETURN expression
Rule 23    assignment_statement -> LOCAL_VAR ASSIGN expression
Rule 24    assignment_statement -> GLOBAL_VAR ASSIGN expression
Rule 25    assignment_statement -> INSTANCE_VAR ASSIGN expression
Rule 26    assignment_statement -> CLASS_VAR ASSIGN expression
Rule 27    assignment_statement -> CONSTANT ASSIGN expression
Rule 28    print_statement -> PRINT L_PAREN argument_list R_PAREN
Rule 29    print_statement -> PRINT L_PAREN R_PAREN
Rule 30    print_statement -> PRINT argument_list
Rule 31    print_statement -> PRINT
Rule 32    puts_statement -> PUTS L_PAREN argument_list R_PAREN
Rule 33    puts_statement -> PUTS L_PAREN R_PAREN
Rule 34    puts_statement -> PUTS argument_list
Rule 35    puts_statement -> PUTS
Rule 36    argument_list -> expression
Rule 37    argument_list -> argument_list COMMA expression
Rule 38    input_statement -> LOCAL_VAR ASSIGN GETS
Rule 39    input_statement -> LOCAL_VAR ASSIGN GETS DOT CHOMP
Rule 40    data_structure -> array_definition
Rule 41    data_structure -> hash_definition
Rule 42    hash_definition -> LOCAL_VAR ASSIGN L_MAYUS_PAREN hash_element_list R_MAYUS_PAREN
Rule 43    hash_element_list -> hash_element
Rule 44    hash_element_list -> hash_element_list COMMA hash_element
Rule 45    hash_element -> STRING HASHARROW expression
Rule 46    hash_element -> LOCAL_VAR TWO_POINTS expression
Rule 47    logical_operator -> AND
Rule 48    logical_operator -> OR
Rule 49    logical_operator -> OR_OPERATOR
Rule 50    array_definition -> LOCAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
Rule 51    array_definition -> LOCAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
Rule 52    array_definition -> GLOBAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
Rule 53    array_definition -> GLOBAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
Rule 54    array_definition -> INSTANCE_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
Rule 55    array_definition -> INSTANCE_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
Rule 56    array_definition -> CLASS_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
Rule 57    array_definition -> CLASS_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
Rule 58    array_append -> LOCAL_VAR APPEND expression
Rule 59    array_append -> GLOBAL_VAR APPEND expression
Rule 60    array_append -> INSTANCE_VAR APPEND expression
Rule 61    array_append -> CLASS_VAR APPEND expression
Rule 62    element_list -> expression
Rule 63    element_list -> element_list COMMA expression
Rule 64    control_structure -> if_statement
Rule 65    control_structure -> until_statement
Rule 66    control_structure -> unless_statement
Rule 67    control_structure -> while_statement
Rule 68    if_statement -> IF condition statement_list END
Rule 69    if_statement -> IF condition statement_list ELSE statement_list END
Rule 70    if_statement -> IF condition statement_list ELSIF condition statement_list ELSE statement_list END
Rule 71    while_statement -> WHILE condition statement_list END
Rule 72    unless_statement -> UNLESS condition statement_list END
Rule 73    unless_statement -> UNLESS condition statement_list ELSE statement_list END
Rule 74    until_statement -> UNTIL condition statement_list END
Rule 75    condition -> expression comparison_operator expression
Rule 76    condition -> condition logical_operator condition
Rule 77    condition -> NOT condition
Rule 78    condition -> L_PAREN condition R_PAREN
Rule 79    function_definition -> DEF LOCAL_VAR parameter_list statement_list END
Rule 80    function_definition -> DEF LOCAL_VAR statement_list END
Rule 81    parameter_list -> L_PAREN parameter_list_inner R_PAREN
Rule 82    parameter_list -> L_PAREN R_PAREN
Rule 83    parameter_list_inner -> LOCAL_VAR
Rule 84    parameter_list_inner -> parameter_list_inner COMMA LOCAL_VAR
Rule 85    expression -> expression_binop
Rule 86    expression -> expression_not
Rule 87    expression -> expression_group
Rule 88    expression -> expression_term
Rule 89    expression -> indexing
Rule 90    expression -> method_call
Rule 91    expression_binop -> expression PLUS expression
Rule 92    expression_binop -> expression MINUS expression
Rule 93    expression_binop -> expression MULTIPLY expression
Rule 94    expression_binop -> expression DIVIDE expression
Rule 95    expression_binop -> expression MODULE expression
Rule 96    expression_binop -> expression EQUALS expression
Rule 97    expression_binop -> expression DIFFERENT expression
Rule 98    expression_binop -> expression GREATER expression
Rule 99    expression_binop -> expression LESS expression
Rule 100   expression_binop -> expression GREATER_EQUAL expression
Rule 101   expression_binop -> expression LESS_EQUAL expression
Rule 102   expression_binop -> expression AND expression
Rule 103   expression_binop -> expression OR expression
Rule 104   expression_not -> NOT expression
Rule 105   expression_group -> L_PAREN expression R_PAREN
Rule 106   expression_term -> INTEGER
Rule 107   expression_term -> FLOAT
Rule 108   expression_term -> STRING
Rule 109   expression_term -> LOCAL_VAR
Rule 110   expression_term -> indexing
Rule 111   expression_term -> function_call
Rule 112   function_call -> LOCAL_VAR L_PAREN argument_list R_PAREN
Rule 113   function_call -> LOCAL_VAR L_PAREN R_PAREN
Rule 114   function_call -> LOCAL_VAR argument_list
Rule 115   function_call -> LOCAL_VAR
Rule 116   method_call -> LOCAL_VAR DOT function_call
Rule 117   method_call -> GLOBAL_VAR DOT function_call
Rule 118   method_call -> INSTANCE_VAR DOT function_call
Rule 119   method_call -> CLASS_VAR DOT function_call
Rule 120   method_call -> CONSTANT DOT function_call
Rule 121   indexing -> LOCAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
Rule 122   indexing -> GLOBAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
Rule 123   indexing -> INSTANCE_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
Rule 124   indexing -> CLASS_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
Rule 125   indexing -> LOCAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
Rule 126   indexing -> GLOBAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
Rule 127   indexing -> INSTANCE_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
Rule 128   indexing -> CLASS_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
Rule 129   indexing -> indexing L_ULTRA_PAREN expression R_ULTRA_PAREN
Rule 130   indexing -> indexing L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
Rule 131   array_assignament -> indexing ASSIGN expression
Rule 132   comparison_operator -> EQUALS
Rule 133   comparison_operator -> DIFFERENT
Rule 134   comparison_operator -> LESS
Rule 135   comparison_operator -> LESS_EQUAL
Rule 136   comparison_operator -> GREATER
Rule 137   comparison_operator -> GREATER_EQUAL
Rule 138   empty -> <empty>

Terminals, with rules where they appear

AND                  : 47 102
APPEND               : 58 59 60 61
ASSIGN               : 23 24 25 26 27 38 39 42 50 51 52 53 54 55 56 57 131
BEGIN                : 
CHOMP                : 39
CLASS                : 18
CLASS_VAR            : 26 56 57 61 119 124 128
COMMA                : 37 44 63 84
CONSTANT             : 18 27 120
DEF                  : 79 80
DIFFERENT            : 97 133
DIVIDE               : 94
DOT                  : 39 116 117 118 119 120
ELSE                 : 69 70 73
ELSIF                : 70
END                  : 18 68 69 70 71 72 73 74 79 80
EQUALS               : 96 132
FLOAT                : 107
GETS                 : 38 39
GLOBAL_VAR           : 24 52 53 59 117 122 126
GREATER              : 98 136
GREATER_EQUAL        : 100 137
HASHARROW            : 45
IF                   : 68 69 70
INSTANCE_VAR         : 25 54 55 60 118 123 127
INTEGER              : 106
LESS                 : 99 134
LESS_EQUAL           : 101 135
LOCAL_VAR            : 23 38 39 42 46 50 51 58 79 80 83 84 109 112 113 114 115 116 121 125
L_MAYUS_PAREN        : 42
L_PAREN              : 28 29 32 33 78 81 82 105 112 113
L_ULTRA_PAREN        : 50 51 52 53 54 55 56 57 121 122 123 124 125 126 127 128 129 130
MINUS                : 92
MODULE               : 95
MULTIPLY             : 93
NIL                  : 
NOT                  : 77 104
OR                   : 48 103
OR_OPERATOR          : 49
PLUS                 : 91
PRINT                : 28 29 30 31
PUTS                 : 32 33 34 35
RETURN               : 22
R_MAYUS_PAREN        : 42
R_PAREN              : 28 29 32 33 78 81 82 105 112 113
R_ULTRA_PAREN        : 50 51 52 53 54 55 56 57 121 122 123 124 125 126 127 128 129 130
STRING               : 45 108
THEN                 : 
TWO_POINTS           : 46 125 126 127 128 130
UNLESS               : 72 73
UNTIL                : 74
WHEN                 : 
WHILE                : 71
error                : 

Nonterminals, with rules where they appear

argument_list        : 28 30 32 34 37 112 114
array_append         : 14
array_assignament    : 16
array_definition     : 40
assignment_statement : 7 21
class_body           : 18
class_definition     : 12
class_statement      : 
comparison_operator  : 75
condition            : 68 69 70 70 71 72 73 74 76 76 77 78
control_structure    : 9
data_structure       : 8
element_list         : 50 52 54 56 63
empty                : 
expression           : 17 22 23 24 25 26 27 36 37 45 46 58 59 60 61 62 63 75 75 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 105 121 122 123 124 125 126 127 128 129 130 131
expression_binop     : 85
expression_group     : 87
expression_not       : 86
expression_term      : 88
function_call        : 111 116 117 118 119 120
function_definition  : 10 20
hash_definition      : 41
hash_element         : 43 44
hash_element_list    : 42 44
if_statement         : 64
indexing             : 15 89 110 129 130 131
input_statement      : 6
logical_operator     : 76
method_call          : 13 90
parameter_list       : 79
parameter_list_inner : 81 84
print_statement      : 4
program              : 0
puts_statement       : 5
return_statement     : 11
statement            : 2 3
statement_list       : 1 3 19 68 69 69 70 70 70 71 72 73 73 74 79 80
unless_statement     : 66
until_statement      : 65
while_statement      : 67

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . print_statement
    (5) statement -> . puts_statement
    (6) statement -> . input_statement
    (7) statement -> . assignment_statement
    (8) statement -> . data_structure
    (9) statement -> . control_structure
    (10) statement -> . function_definition
    (11) statement -> . return_statement
    (12) statement -> . class_definition
    (13) statement -> . method_call
    (14) statement -> . array_append
    (15) statement -> . indexing
    (16) statement -> . array_assignament
    (17) statement -> . expression
    (28) print_statement -> . PRINT L_PAREN argument_list R_PAREN
    (29) print_statement -> . PRINT L_PAREN R_PAREN
    (30) print_statement -> . PRINT argument_list
    (31) print_statement -> . PRINT
    (32) puts_statement -> . PUTS L_PAREN argument_list R_PAREN
    (33) puts_statement -> . PUTS L_PAREN R_PAREN
    (34) puts_statement -> . PUTS argument_list
    (35) puts_statement -> . PUTS
    (38) input_statement -> . LOCAL_VAR ASSIGN GETS
    (39) input_statement -> . LOCAL_VAR ASSIGN GETS DOT CHOMP
    (23) assignment_statement -> . LOCAL_VAR ASSIGN expression
    (24) assignment_statement -> . GLOBAL_VAR ASSIGN expression
    (25) assignment_statement -> . INSTANCE_VAR ASSIGN expression
    (26) assignment_statement -> . CLASS_VAR ASSIGN expression
    (27) assignment_statement -> . CONSTANT ASSIGN expression
    (40) data_structure -> . array_definition
    (41) data_structure -> . hash_definition
    (64) control_structure -> . if_statement
    (65) control_structure -> . until_statement
    (66) control_structure -> . unless_statement
    (67) control_structure -> . while_statement
    (79) function_definition -> . DEF LOCAL_VAR parameter_list statement_list END
    (80) function_definition -> . DEF LOCAL_VAR statement_list END
    (22) return_statement -> . RETURN expression
    (18) class_definition -> . CLASS CONSTANT class_body END
    (116) method_call -> . LOCAL_VAR DOT function_call
    (117) method_call -> . GLOBAL_VAR DOT function_call
    (118) method_call -> . INSTANCE_VAR DOT function_call
    (119) method_call -> . CLASS_VAR DOT function_call
    (120) method_call -> . CONSTANT DOT function_call
    (58) array_append -> . LOCAL_VAR APPEND expression
    (59) array_append -> . GLOBAL_VAR APPEND expression
    (60) array_append -> . INSTANCE_VAR APPEND expression
    (61) array_append -> . CLASS_VAR APPEND expression
    (121) indexing -> . LOCAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (122) indexing -> . GLOBAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (123) indexing -> . INSTANCE_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (124) indexing -> . CLASS_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (125) indexing -> . LOCAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (126) indexing -> . GLOBAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (127) indexing -> . INSTANCE_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (128) indexing -> . CLASS_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (129) indexing -> . indexing L_ULTRA_PAREN expression R_ULTRA_PAREN
    (130) indexing -> . indexing L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (131) array_assignament -> . indexing ASSIGN expression
    (85) expression -> . expression_binop
    (86) expression -> . expression_not
    (87) expression -> . expression_group
    (88) expression -> . expression_term
    (89) expression -> . indexing
    (90) expression -> . method_call
    (50) array_definition -> . LOCAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (51) array_definition -> . LOCAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (52) array_definition -> . GLOBAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (53) array_definition -> . GLOBAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (54) array_definition -> . INSTANCE_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (55) array_definition -> . INSTANCE_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (56) array_definition -> . CLASS_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (57) array_definition -> . CLASS_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (42) hash_definition -> . LOCAL_VAR ASSIGN L_MAYUS_PAREN hash_element_list R_MAYUS_PAREN
    (68) if_statement -> . IF condition statement_list END
    (69) if_statement -> . IF condition statement_list ELSE statement_list END
    (70) if_statement -> . IF condition statement_list ELSIF condition statement_list ELSE statement_list END
    (74) until_statement -> . UNTIL condition statement_list END
    (72) unless_statement -> . UNLESS condition statement_list END
    (73) unless_statement -> . UNLESS condition statement_list ELSE statement_list END
    (71) while_statement -> . WHILE condition statement_list END
    (91) expression_binop -> . expression PLUS expression
    (92) expression_binop -> . expression MINUS expression
    (93) expression_binop -> . expression MULTIPLY expression
    (94) expression_binop -> . expression DIVIDE expression
    (95) expression_binop -> . expression MODULE expression
    (96) expression_binop -> . expression EQUALS expression
    (97) expression_binop -> . expression DIFFERENT expression
    (98) expression_binop -> . expression GREATER expression
    (99) expression_binop -> . expression LESS expression
    (100) expression_binop -> . expression GREATER_EQUAL expression
    (101) expression_binop -> . expression LESS_EQUAL expression
    (102) expression_binop -> . expression AND expression
    (103) expression_binop -> . expression OR expression
    (104) expression_not -> . NOT expression
    (105) expression_group -> . L_PAREN expression R_PAREN
    (106) expression_term -> . INTEGER
    (107) expression_term -> . FLOAT
    (108) expression_term -> . STRING
    (109) expression_term -> . LOCAL_VAR
    (110) expression_term -> . indexing
    (111) expression_term -> . function_call
    (112) function_call -> . LOCAL_VAR L_PAREN argument_list R_PAREN
    (113) function_call -> . LOCAL_VAR L_PAREN R_PAREN
    (114) function_call -> . LOCAL_VAR argument_list
    (115) function_call -> . LOCAL_VAR

    PRINT           shift and go to state 18
    PUTS            shift and go to state 20
    LOCAL_VAR       shift and go to state 21
    GLOBAL_VAR      shift and go to state 22
    INSTANCE_VAR    shift and go to state 23
    CLASS_VAR       shift and go to state 24
    CONSTANT        shift and go to state 25
    DEF             shift and go to state 32
    RETURN          shift and go to state 33
    CLASS           shift and go to state 34
    IF              shift and go to state 40
    UNTIL           shift and go to state 41
    UNLESS          shift and go to state 42
    WHILE           shift and go to state 43
    NOT             shift and go to state 44
    L_PAREN         shift and go to state 19
    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    STRING          shift and go to state 47

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print_statement                shift and go to state 4
    puts_statement                 shift and go to state 5
    input_statement                shift and go to state 6
    assignment_statement           shift and go to state 7
    data_structure                 shift and go to state 8
    control_structure              shift and go to state 9
    function_definition            shift and go to state 10
    return_statement               shift and go to state 11
    class_definition               shift and go to state 12
    method_call                    shift and go to state 13
    array_append                   shift and go to state 14
    indexing                       shift and go to state 15
    array_assignament              shift and go to state 16
    expression                     shift and go to state 17
    array_definition               shift and go to state 26
    hash_definition                shift and go to state 27
    if_statement                   shift and go to state 28
    until_statement                shift and go to state 29
    unless_statement               shift and go to state 30
    while_statement                shift and go to state 31
    function_call                  shift and go to state 35
    expression_binop               shift and go to state 36
    expression_not                 shift and go to state 37
    expression_group               shift and go to state 38
    expression_term                shift and go to state 39

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . print_statement
    (5) statement -> . puts_statement
    (6) statement -> . input_statement
    (7) statement -> . assignment_statement
    (8) statement -> . data_structure
    (9) statement -> . control_structure
    (10) statement -> . function_definition
    (11) statement -> . return_statement
    (12) statement -> . class_definition
    (13) statement -> . method_call
    (14) statement -> . array_append
    (15) statement -> . indexing
    (16) statement -> . array_assignament
    (17) statement -> . expression
    (28) print_statement -> . PRINT L_PAREN argument_list R_PAREN
    (29) print_statement -> . PRINT L_PAREN R_PAREN
    (30) print_statement -> . PRINT argument_list
    (31) print_statement -> . PRINT
    (32) puts_statement -> . PUTS L_PAREN argument_list R_PAREN
    (33) puts_statement -> . PUTS L_PAREN R_PAREN
    (34) puts_statement -> . PUTS argument_list
    (35) puts_statement -> . PUTS
    (38) input_statement -> . LOCAL_VAR ASSIGN GETS
    (39) input_statement -> . LOCAL_VAR ASSIGN GETS DOT CHOMP
    (23) assignment_statement -> . LOCAL_VAR ASSIGN expression
    (24) assignment_statement -> . GLOBAL_VAR ASSIGN expression
    (25) assignment_statement -> . INSTANCE_VAR ASSIGN expression
    (26) assignment_statement -> . CLASS_VAR ASSIGN expression
    (27) assignment_statement -> . CONSTANT ASSIGN expression
    (40) data_structure -> . array_definition
    (41) data_structure -> . hash_definition
    (64) control_structure -> . if_statement
    (65) control_structure -> . until_statement
    (66) control_structure -> . unless_statement
    (67) control_structure -> . while_statement
    (79) function_definition -> . DEF LOCAL_VAR parameter_list statement_list END
    (80) function_definition -> . DEF LOCAL_VAR statement_list END
    (22) return_statement -> . RETURN expression
    (18) class_definition -> . CLASS CONSTANT class_body END
    (116) method_call -> . LOCAL_VAR DOT function_call
    (117) method_call -> . GLOBAL_VAR DOT function_call
    (118) method_call -> . INSTANCE_VAR DOT function_call
    (119) method_call -> . CLASS_VAR DOT function_call
    (120) method_call -> . CONSTANT DOT function_call
    (58) array_append -> . LOCAL_VAR APPEND expression
    (59) array_append -> . GLOBAL_VAR APPEND expression
    (60) array_append -> . INSTANCE_VAR APPEND expression
    (61) array_append -> . CLASS_VAR APPEND expression
    (121) indexing -> . LOCAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (122) indexing -> . GLOBAL_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (123) indexing -> . INSTANCE_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (124) indexing -> . CLASS_VAR L_ULTRA_PAREN expression R_ULTRA_PAREN
    (125) indexing -> . LOCAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (126) indexing -> . GLOBAL_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (127) indexing -> . INSTANCE_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (128) indexing -> . CLASS_VAR L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (129) indexing -> . indexing L_ULTRA_PAREN expression R_ULTRA_PAREN
    (130) indexing -> . indexing L_ULTRA_PAREN TWO_POINTS expression R_ULTRA_PAREN
    (131) array_assignament -> . indexing ASSIGN expression
    (85) expression -> . expression_binop
    (86) expression -> . expression_not
    (87) expression -> . expression_group
    (88) expression -> . expression_term
    (89) expression -> . indexing
    (90) expression -> . method_call
    (50) array_definition -> . LOCAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (51) array_definition -> . LOCAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (52) array_definition -> . GLOBAL_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (53) array_definition -> . GLOBAL_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (54) array_definition -> . INSTANCE_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (55) array_definition -> . INSTANCE_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (56) array_definition -> . CLASS_VAR ASSIGN L_ULTRA_PAREN element_list R_ULTRA_PAREN
    (57) array_definition -> . CLASS_VAR ASSIGN L_ULTRA_PAREN R_ULTRA_PAREN
    (42) hash_definition -> . LOCAL_VAR ASSIGN L_MAYUS_PAREN hash_element_list R_MAYUS_PAREN
    (68) if_statement -> . IF condition statement_list END
    (69) if_statement -> . IF condition statement_list ELSE statement_list END
    (70) if_statement -> . IF condition statement_list ELSIF condition statement_list ELSE statement_list END
    (74) until_statement -> . UNTIL condition statement_list END
    (72) unless_statement -> . UNLESS condition statement_list END
    (73) unless_statement -> . UNLESS condition statement_list ELSE statement_list END
    (71) while_statement -> . WHILE condition statement_list END
    (91) expression_binop -> . expression PLUS expression
    (92) expression_binop -> . expression MINUS expression
    (93) expression_binop -> . expression MULTIPLY expression
    (94) expression_binop -> . expression DIVIDE expression
    (95) expression_binop -> . expression MODULE expression
    (96) expression_binop -> . expression EQUALS expression
    (97) expression_binop -> . expression DIFFERENT expression
    (98) expression_binop -> . expression GREATER expression
    (99) expression_binop -> . expression LESS expression
    (100) expression_binop -> . expression GREATER_EQUAL expression
    (101) expression_binop -> . expression LESS_EQUAL expression
    (102) expression_binop -> . expression AND expression
    (103) expression_binop -> . expression OR expression
    (104) expression_not -> . NOT expression
    (105) expression_group -> . L_PAREN expression R_PAREN
    (106) expression_term -> . INTEGER
    (107) expression_term -> . FLOAT
    (108) expression_term -> . STRING
    (109) expression_term -> . LOCAL_VAR
    (110) expression_term -> . indexing
    (111) expression_term -> . function_call
    (112) function_call -> . LOCAL_VAR L_PAREN argument_list R_PAREN
    (113) function_call -> . LOCAL_VAR L_PAREN R_PAREN
    (114) function_call -> . LOCAL_VAR argument_list
    (115) function_call -> . LOCAL_VAR

    $end            reduce using rule 1 (program -> statement_list .)
    PRINT           shift and go to state 18
    PUTS            shift and go to state 20
    LOCAL_VAR       shift and go to state 21
    GLOBAL_VAR      shift and go to state 22
    INSTANCE_VAR    shift and go to state 23
    CLASS_VAR       shift and go to state 24
    CONSTANT        shift and go to state 25
    DEF             shift and go to state 32
    RETURN          shift and go to state 33
    CLASS           shift and go to state 34
    IF              shift and go to state 40
    UNTIL           shift and go to state 41
    UNLESS          shift and go to state 42
    WHILE           shift and go to state 43
    NOT             shift and go to state 44
    L_PAREN         shift and go to state 19
    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    STRING          shift and go to state 47

    statement                      shift and go to state 48
    print_statement                shift and go to state 4
    puts_statement                 shift and go to state 5
    input_statement                shift and go to state 6
    assignment_statement           shift and go to state 7
    data_structure                 shift and go to state 8
    control_structure              shift and go to state 9
    function_definition            shift and go to state 10
    return_statement               shift and go to state 11
    class_definition               shift and go to state 12
    method_call                    shift and go to state 13
    array_append                   shift and go to state 14
    indexing                       shift and go to state 15
    array_assignament              shift and go to state 16
    expression                     shift and go to state 17
    array_definition               shift and go to state 26
    hash_definition                shift and go to state 27
    if_statement                   shift and go to state 28
    until_statement                shift and go to state 29
    unless_statement               shift and go to state 30
    while_statement                shift and go to state 31
    function_call                  shift and go to state 35
    expression_binop               shift and go to state 36
    expression_not                 shift and go to state 37
    expression_group               shift and go to state 38
    expression_term                shift and go to state 39

state 3

    (2) statement_list -> statement .

    PRINT           reduce using rule 2 (statement_list -> statement .)
    PUTS            reduce using rule 2 (statement_list -> statement .)
    LOCAL_VAR       reduce using rule 2 (statement_list -> statement .)
    GLOBAL_VAR      reduce using rule 2 (statement_list -> statement .)
    INSTANCE_VAR    reduce using rule 2 (statement_list -> statement .)
    CLASS_VAR       reduce using rule 2 (statement_list -> statement .)
    CONSTANT        reduce using rule 2 (statement_list -> statement .)
    DEF             reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    CLASS           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    UNTIL           reduce using rule 2 (statement_list -> statement .)
    UNLESS          reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    L_PAREN         reduce using rule 2 (statement_list -> statement .)
    INTEGER         reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    ELSE            reduce using rule 2 (statement_list -> statement .)
    ELSIF           reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> print_statement .

    PRINT           reduce using rule 4 (statement -> print_statement .)
    PUTS            reduce using rule 4 (statement -> print_statement .)
    LOCAL_VAR       reduce using rule 4 (statement -> print_statement .)
    GLOBAL_VAR      reduce using rule 4 (statement -> print_statement .)
    INSTANCE_VAR    reduce using rule 4 (statement -> print_statement .)
    CLASS_VAR       reduce using rule 4 (statement -> print_statement .)
    CONSTANT        reduce using rule 4 (statement -> print_statement .)
    DEF             reduce using rule 4 (statement -> print_statement .)
    RETURN          reduce using rule 4 (statement -> print_statement .)
    CLASS           reduce using rule 4 (statement -> print_statement .)
    IF              reduce using rule 4 (statement -> print_statement .)
    UNTIL           reduce using rule 4 (statement -> print_statement .)
    UNLESS          reduce using rule 4 (statement -> print_statement .)
    WHILE           reduce using rule 4 (statement -> print_statement .)
    NOT             reduce using rule 4 (statement -> print_statement .)
    L_PAREN         reduce using rule 4 (statement -> print_statement .)
    INTEGER         reduce using rule 4 (statement -> print_statement .)
    FLOAT           reduce using rule 4 (statement -> print_statement .)
    STRING          reduce using rule 4 (statement -> print_statement .)
    $end            reduce using rule 4 (statement -> print_statement .)
    END             reduce using rule 4 (statement -> print_statement .)
    ELSE            reduce using rule 4 (statement -> print_statement .)
    ELSIF           reduce using rule 4 (statement -> print_statement .)


state 5

    (5) statement -> puts_statement .

    PRINT           reduce using rule 5 (statement -> puts_statement .)
    PUTS            reduce using rule 5 (statement -> puts_statement .)
    LOCAL_VAR       reduce using rule 5 (statement -> puts_statement .)
    GLOBAL_VAR      reduce using rule 5 (statement -> puts_statement .)
    INSTANCE_VAR    reduce using rule 5 (statement -> puts_statement .)
    CLASS_VAR       reduce using rule 5 (statement -> puts_statement .)
    CONSTANT        reduce using rule 5 (statement -> puts_statement .)
    DEF             reduce using rule 5 (statement -> puts_statement .)
    RETURN          reduce using rule 5 (statement -> puts_statement .)
    CLASS           reduce using rule 5 (statement -> puts_statement .)
    IF              reduce using rule 5 (statement -> puts_statement .)
    UNTIL           reduce using rule 5 (statement -> puts_statement .)
    UNLESS          reduce using rule 5 (statement -> puts_statement .)
    WHILE           reduce using rule 5 (statement -> puts_statement .)
    NOT             reduce using rule 5 (statement -> puts_statement .)
    L_PAREN         reduce using rule 5 (statement -> puts_statement .)
    INTEGER         reduce using rule 5 (statement -> puts_statement .)
    FLOAT           reduce using rule 5 (statement -> puts_statement .)
    STRING          reduce using rule 5 (statement -> puts_statement .)
    $end            reduce using rule 5 (statement -> puts_statement .)
    END             reduce using rule 5 (statement -> puts_statement .)
    ELSE            reduce using rule 5 (statement -> puts_statement .)
    ELSIF           reduce using rule 5 (statement -> puts_statement .)


state 6

    (6) statement -> input_statement .
